updated ReadMe.md and ProjectBrief.md for Stream 1 Final Project and Stream 2 Final Project, added TOC to each, also did some code tidy on stream 1 final

--- a/Stream-1/Front-End-Development/Final-Project/Band-Project/index.html
+++ b/Stream-1/Front-End-Development/Final-Project/Band-Project/index.html
@@ -62,13 +62,13 @@
     <!-- footer -->
     <footer class="nav navbar-fixed-bottom navbar-inverse">
         <div class="container-fluid">
-            <p class="text-muted">&copy; 2016 David Gunner Jnr</p>
+            <p class="text-muted">&copy; 2017 David Gunner &#40;Jnr&#41;</p>
             <ul>
-                <li><a href=""><span><i class="fa fa-google-plus-square"></i></span></a></li>
-                <li><a href=""><span><i class="fa fa-facebook-square"></i></span></a></li>
-                <li><a href=""><span><i class="fa fa-twitter-square"></i></span></a></li>
-                <li><a href=""><span><i class="fa fa-youtube-square"></i></span></a></li>
-                <li><a href="mailto:"><span><i class="fa fa-envelope"></i></span></a></li>
+                <li><a href="#"><span><i class="fa fa-google-plus-square"></i></span></a></li>
+                <li><a href="#"><span><i class="fa fa-facebook-square"></i></span></a></li>
+                <li><a href="#"><span><i class="fa fa-twitter-square"></i></span></a></li>
+                <li><a href="#"><span><i class="fa fa-youtube-square"></i></span></a></li>
+                <li><a href="mailto:gunnerjnr@live.co.uk"><span><i class="fa fa-envelope"></i></span></a></li>
             </ul>
         </div>
     </footer>
@@ -92,5 +92,4 @@
     <!-- access our service script -->
     <script src="js/service.js"></script>
 </body>
-
 </html>
