small change to stream 1 final project

--- a/Stream-1/Front-End-Development/Final-Project/Band-Project/index.html
+++ b/Stream-1/Front-End-Development/Final-Project/Band-Project/index.html
@@ -42,11 +42,11 @@
         <!-- navbar header end -->
         <div class="collapse navbar-collapse" id="myCollapsingList">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/">Home</a></li>
-                <li><a href="#/meet-the-band">The Band</a></li>
-                <li><a href="#/tour-info">Touring</a></li>
-                <li><a href="#/services">Services</a></li>
-                <li id="last-nav-item"><a href="#/searchiTunes">Search iTunes</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/meet-the-band">The Band</a></li>
+                <li><a href="/tour-info">Touring</a></li>
+                <li><a href="/services">Services</a></li>
+                <li id="last-nav-item"><a href="/searchiTunes">Search iTunes</a></li>
             </ul>
         </div>
         <!-- collapsing navbar end -->
