--- a/Stream-1/Front-End-Development/Final-Project/Band-Project/index.html
+++ b/Stream-1/Front-End-Development/Final-Project/Band-Project/index.html
@@ -30,7 +30,7 @@
     <!-- Main site navigation -->
     <nav class="navbar navbar-fixed-top navbar-inverse">
         <div class="nav navbar-header">
-            <a class="navbar-brand" href="#/">Swing &amp; Jive Hive</a>
+            <a class="navbar-brand" href="/">Swing &amp; Jive Hive</a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myCollapsingList">
                 <span class="sr-only">Toggle Nav</span>
                 <span class="icon-bar"></span>
@@ -42,7 +42,7 @@
         <!-- navbar header end -->
         <div class="collapse navbar-collapse" id="myCollapsingList">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="/meet-the-band">The Band</a></li>
                 <li><a href="/tour-info">Touring</a></li>
                 <li><a href="/services">Services</a></li>
